# object_detector_6d

./: CMakeLists.txt  LICENSE  README.md  caffe_solver.prototxt  generate_scripts.sh
HoughForest/include/: HFBase.h  HFTest.h  HFTrain.h  MeshUtils.h  detector_options.pb.h
HoughForest/include/proto/: detector_options.proto
HoughForest/src/: HFBase.cpp  HFTest.cpp  HFTrain.cpp  MeshUtils.cpp  detector_options.pb.cc  main.cpp
PatchGen/include/: my_c_timer.h  patch_generator.h  render_views_tesselated_sphere_mod.h  train_patch_generator.h
PatchGen/include/cuda/: cuda_utils.h  patch_extractor.h  surface_normals.h
PatchGen/src/: main.cpp  patch_generator.cpp  render_views_tesselated_sphere_mod.cpp  train_patch_generator.cpp
PatchGen/src/cuda/: cuda_utils.cu  patch_extractor.cu  surface_normals.cu
matlab_ply_merge_textures/: MeshSingleTexture.m
